<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/step_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="18dp"
        tools:text="add all the ingredients and mix them"
        />

</LinearLayout>