<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingapp.MainActivity">

    <!--placing another views inside the recyclerView tag causes an error of recyclerView has no LayoutManagerr  -->


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_internet_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="40sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

    >

    </android.support.v7.widget.RecyclerView>


</FrameLayout>
