...
            android:textColor="#000"
            android:textSize="30sp"
            tools:text="Steps" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

        </android.support.v7.widget.RecyclerView>

...
